<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/list_view_backgroud">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:padding="4dp">

        <TextView
            android:id="@+id/request_row_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_example"
            android:textSize="17sp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/request_row_urgency_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/urgency_example"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>


    <TextView
        android:id="@+id/request_row_creator_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="4dp"
        android:text="@string/creator_example"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/request_row_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="4dp"
        android:text="@string/date_example"
        android:textSize="14sp" />


</LinearLayout>